mapping with 2 activities  - working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".MapChooseActivity" android:label="@string/selectmap"></activity>
+
+
+        <!--
+        <activity android:name=".PreferencesActivity" android:label="@string/preferences">
+
+        </activity>
+        -->
     </application>
+
 
 </manifest>
